Literature Surveys Added , Notebook Code Updated

--- a/Notebook/Breast Cancer Detection Project - Phase2.ipynb
+++ b/Notebook/Breast Cancer Detection Project - Phase2.ipynb
@@ -617,7 +617,7 @@
    "id": "70cc8fed",
    "metadata": {},
    "source": [
-    "### Trainging Auto Encoders"
+    "### Training Auto Encoders"
    ]
   },
   {
@@ -777,7 +777,7 @@
     "    plt.title('Reconstructed Image')\n",
     "    plt.show()\n",
     "\n",
-    "test_image_path = \"SOB_B_A-14-22549AB-400-001.png\"\n",
+    "test_image_path = \"s\"\n",
     "\n",
     "# Preprocess the image\n",
     "test_image_mrcae = preprocess_single_image(test_image_path)\n",
@@ -796,12 +796,353 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "933bbac7",
+   "metadata": {},
+   "source": [
+    "# Test"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e4b2931c",
+   "execution_count": 3,
+   "id": "de6ea415",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from keras.layers import Input, Conv2D, MaxPooling2D, UpSampling2D, Concatenate\n",
+    "from keras.models import Model\n",
+    "\n",
+    "def create_enhanced_autoencoder():\n",
+    "    input_img = Input(shape=(None, None, 1))  # Flexible input shape\n",
+    "    \n",
+    "    # Encoder\n",
+    "    x = Conv2D(64, (3, 3), activation='relu', padding='same')(input_img)\n",
+    "    x = Conv2D(64, (3, 3), activation='relu', padding='same')(x)\n",
+    "    x = MaxPooling2D((2, 2), padding='same')(x)\n",
+    "    \n",
+    "    x = Conv2D(128, (3, 3), activation='relu', padding='same')(x)\n",
+    "    x = Conv2D(128, (3, 3), activation='relu', padding='same')(x)\n",
+    "    x = MaxPooling2D((2, 2), padding='same')(x)\n",
+    "    \n",
+    "    x = Conv2D(256, (3, 3), activation='relu', padding='same')(x)\n",
+    "    x = Conv2D(256, (3, 3), activation='relu', padding='same')(x)\n",
+    "    encoded = MaxPooling2D((2, 2), padding='same')(x)\n",
+    "    \n",
+    "    # Decoder\n",
+    "    x = Conv2D(256, (3, 3), activation='relu', padding='same')(encoded)\n",
+    "    x = Conv2D(256, (3, 3), activation='relu', padding='same')(x)\n",
+    "    x = UpSampling2D((2, 2))(x)\n",
+    "    \n",
+    "    x = Conv2D(128, (3, 3), activation='relu', padding='same')(x)\n",
+    "    x = Conv2D(128, (3, 3), activation='relu', padding='same')(x)\n",
+    "    x = UpSampling2D((2, 2))(x)\n",
+    "    \n",
+    "    x = Conv2D(64, (3, 3), activation='relu', padding='same')(x)\n",
+    "    x = Conv2D(64, (3, 3), activation='relu', padding='same')(x)\n",
+    "    x = UpSampling2D((2, 2))(x)\n",
+    "    \n",
+    "    x = Conv2D(32, (3, 3), activation='relu', padding='same')(x)\n",
+    "    x = Conv2D(32, (3, 3), activation='relu', padding='same')(x)\n",
+    "    \n",
+    "    # Adding skip connections from encoder to decoder\n",
+    "    x = Concatenate()([x, encoded])\n",
+    "    \n",
+    "    decoded = Conv2D(1, (3, 3), activation='sigmoid', padding='same')(x)\n",
+    "\n",
+    "    autoencoder = Model(input_img, decoded)\n",
+    "    autoencoder.compile(optimizer='adam', loss='mean_squared_error')\n",
+    "    return autoencoder\n",
+    "\n",
+    "enhanced_autoencoder = create_enhanced_autoencoder()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e290af2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import cv2\n",
+    "# import torch\n",
+    "# import torchvision.transforms as transforms\n",
+    "\n",
+    "# # Define SRCNN model architecture (you should have the model implemented or imported)\n",
+    "# # For demonstration purposes, we'll assume a placeholder SRCNN model\n",
+    "\n",
+    "# class SRCNN(torch.nn.Module):\n",
+    "#     def __init__(self):\n",
+    "#         super(SRCNN, self).__init__()\n",
+    "#         # Define your SRCNN model layers here\n",
+    "\n",
+    "#     def forward(self, x):\n",
+    "#         # Implement forward pass of SRCNN model\n",
+    "#         return x  # Placeholder implementation, replace with actual model logic\n",
+    "\n",
+    "# # Function to resize image to target resolution\n",
+    "# def resize_image(image, target_resolution):\n",
+    "#     return cv2.resize(image, (target_resolution[1], target_resolution[0]))\n",
+    "\n",
+    "# # Function to generate three resolutions for a given image using SRCNN model\n",
+    "# def generate_resolutions(image, model, target_resolutions):\n",
+    "#     base_resolution = target_resolutions[0]\n",
+    "#     intermediate_resolution = target_resolutions[1]\n",
+    "#     high_resolution = target_resolutions[2]\n",
+    "\n",
+    "#     # Base Resolution Generation\n",
+    "#     base_image = resize_image(image, base_resolution)\n",
+    "#     base_image_tensor = transforms.ToTensor()(base_image).unsqueeze(0)\n",
+    "#     base_output = model(base_image_tensor)\n",
+    "\n",
+    "#     # Intermediate Resolution Generation\n",
+    "#     intermediate_image = resize_image(base_output.squeeze(0).permute(1, 2, 0).numpy(), intermediate_resolution)\n",
+    "#     intermediate_image_tensor = transforms.ToTensor()(intermediate_image).unsqueeze(0)\n",
+    "#     intermediate_output = model(intermediate_image_tensor)\n",
+    "\n",
+    "#     # High-Resolution Generation\n",
+    "#     high_image = resize_image(intermediate_output.squeeze(0).permute(1, 2, 0).numpy(), high_resolution)\n",
+    "#     high_image_tensor = transforms.ToTensor()(high_image).unsqueeze(0)\n",
+    "#     high_output = model(high_image_tensor)\n",
+    "\n",
+    "#     return base_image, intermediate_image, high_image\n",
+    "\n",
+    "# # Example usage\n",
+    "# if __name__ == \"__main__\":\n",
+    "#     # Load SRCNN model (replace with your actual model loading code)\n",
+    "#     srcnn_model = SRCNN()\n",
+    "\n",
+    "#     # Define target resolutions\n",
+    "#     target_resolutions = [(100, 100), (200, 200), (400, 400)]  # Example resolutions\n",
+    "\n",
+    "#     # Load input image (replace with your actual image loading code)\n",
+    "#     input_image = cv2.imread(\"input_image.jpg\")\n",
+    "\n",
+    "#     # Generate resolutions for the input image\n",
+    "#     base_image, intermediate_image, high_image = generate_resolutions(input_image, srcnn_model, target_resolutions)\n",
+    "\n",
+    "#     # Display or save the generated images\n",
+    "#     cv2.imshow(\"Base Resolution\", base_image)\n",
+    "#     cv2.imshow(\"Intermediate Resolution\", intermediate_image)\n",
+    "#     cv2.imshow(\"High Resolution\", high_image)\n",
+    "#     cv2.waitKey(0)\n",
+    "#     cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7944d33f",
+   "metadata": {},
+   "source": [
+    "# SRCNN Model For Multisclae Image Representation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16c2ed3e",
+   "metadata": {},
+   "source": [
+    "### Training SRCNN Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f8b78c22",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/12\n",
+      "248/248 [==============================] - 46s 183ms/step - loss: 0.0176\n",
+      "Epoch 2/12\n",
+      "248/248 [==============================] - 49s 197ms/step - loss: 0.0050\n",
+      "Epoch 3/12\n",
+      "248/248 [==============================] - 50s 200ms/step - loss: 0.0036\n",
+      "Epoch 4/12\n",
+      "248/248 [==============================] - 49s 199ms/step - loss: 0.0032\n",
+      "Epoch 5/12\n",
+      "248/248 [==============================] - 50s 200ms/step - loss: 0.0031\n",
+      "Epoch 6/12\n",
+      "248/248 [==============================] - 50s 201ms/step - loss: 0.0030\n",
+      "Epoch 7/12\n",
+      "248/248 [==============================] - 50s 200ms/step - loss: 0.0028\n",
+      "Epoch 8/12\n",
+      "248/248 [==============================] - 49s 199ms/step - loss: 0.0027\n",
+      "Epoch 9/12\n",
+      "248/248 [==============================] - 50s 201ms/step - loss: 0.0028\n",
+      "Epoch 10/12\n",
+      "248/248 [==============================] - 50s 200ms/step - loss: 0.0026\n",
+      "Epoch 11/12\n",
+      "248/248 [==============================] - 49s 200ms/step - loss: 0.0026\n",
+      "Epoch 12/12\n",
+      "248/248 [==============================] - 49s 200ms/step - loss: 0.0026\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/aflah/anaconda3/lib/python3.11/site-packages/keras/src/engine/training.py:3103: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+      "  saving_api.save_model(\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Training the SRCNN model\n",
+    "import os\n",
+    "import numpy as np\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Conv2D\n",
+    "from tensorflow.keras.preprocessing.image import load_img, img_to_array, array_to_img\n",
+    "\n",
+    "# Define constants\n",
+    "low_resolution_height = 100  # Updated height based on SRCNN model input shape\n",
+    "low_resolution_width = 100   # Updated width based on SRCNN model input shape\n",
+    "channels = 3  # Assuming RGB images, adjust if using grayscale\n",
+    "scaling_factor = 2  # You can adjust this based on the desired scaling factor\n",
+    "\n",
+    "# Function to load and preprocess images from a folder\n",
+    "def load_and_preprocess_images(folder_path):\n",
+    "    images = []\n",
+    "    for filename in os.listdir(folder_path):\n",
+    "        if filename.endswith(('.jpg', '.jpeg', '.png')):\n",
+    "            image_path = os.path.join(folder_path, filename)\n",
+    "            img = load_and_preprocess_single_image(image_path)\n",
+    "            images.append(img)\n",
+    "    return np.array(images)\n",
+    "\n",
+    "# Function to preprocess a single image\n",
+    "def load_and_preprocess_single_image(image_path):\n",
+    "    img = load_img(image_path, target_size=(low_resolution_height, low_resolution_width))\n",
+    "    img_array = img_to_array(img) / 255.0  # Normalize pixel values\n",
+    "    return img_array\n",
+    "\n",
+    "# Function to create SRCNN model\n",
+    "def create_srcnn_model(input_shape=(None, None, 3)):\n",
+    "    model = Sequential()\n",
+    "    model.add(Conv2D(64, (9, 9), activation='relu', padding='same', input_shape=input_shape))\n",
+    "    model.add(Conv2D(32, (1, 1), activation='relu', padding='same'))\n",
+    "    model.add(Conv2D(3, (5, 5), activation='linear', padding='same'))\n",
+    "    return model\n",
+    "\n",
+    "\n",
+    "# Load and preprocess images for training\n",
+    "training_folder_path = \"/home/aflah/Desktop/Project Phase2-old/Full_Images\"  # Replace with the actual path\n",
+    "high_resolution_images = load_and_preprocess_images(training_folder_path)\n",
+    "\n",
+    "# Generate low-resolution images by downscaling the high-resolution images\n",
+    "low_resolution_images = [array_to_img(img).resize((low_resolution_height, low_resolution_width)) for img in high_resolution_images]\n",
+    "low_resolution_images = [img_to_array(img) / 255.0 for img in low_resolution_images]\n",
+    "\n",
+    "# Create SRCNN model\n",
+    "srcnn_model = create_srcnn_model(input_shape=(None, None, 3))\n",
+    "\n",
+    "# Compile the model\n",
+    "srcnn_model.compile(optimizer='adam', loss='mean_squared_error')\n",
+    "\n",
+    "# Train the SRCNN model\n",
+    "srcnn_model.fit(np.array(low_resolution_images), np.array(high_resolution_images), epochs=12, batch_size=32)\n",
+    "\n",
+    "# Save the trained SRCNN model\n",
+    "srcnn_model.save(\"/home/aflah/Desktop/Project-Phase-2/Model/srcnn_model.h5\")  # Replace with the desired path"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a65e0d25",
+   "metadata": {},
+   "source": [
+    "### Testing the trained SRCNN Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "bad50653",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 75ms/step\n",
+      "1/1 [==============================] - 0s 81ms/step\n",
+      "1/1 [==============================] - 0s 96ms/step\n",
+      "1/1 [==============================] - 0s 56ms/step\n",
+      "1/1 [==============================] - 0s 68ms/step\n",
+      "1/1 [==============================] - 0s 103ms/step\n",
+      "1/1 [==============================] - 0s 53ms/step\n",
+      "1/1 [==============================] - 0s 59ms/step\n",
+      "1/1 [==============================] - 0s 97ms/step\n",
+      "1/1 [==============================] - 0s 61ms/step\n",
+      "1/1 [==============================] - 0s 65ms/step\n",
+      "1/1 [==============================] - 0s 98ms/step\n",
+      "1/1 [==============================] - 0s 54ms/step\n",
+      "1/1 [==============================] - 0s 59ms/step\n",
+      "1/1 [==============================] - 0s 98ms/step\n",
+      "1/1 [==============================] - 0s 55ms/step\n",
+      "1/1 [==============================] - 0s 62ms/step\n",
+      "1/1 [==============================] - 0s 97ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "from tensorflow.keras.models import load_model\n",
+    "from tensorflow.keras.preprocessing.image import load_img, img_to_array, array_to_img\n",
+    "\n",
+    "# Define constants\n",
+    "input_folder = \"/home/aflah/Desktop/Project-Phase-2/input_srcnn_images\"\n",
+    "output_folder = \"/home/aflah/Desktop/Project-Phase-2/output_srcnn_images\"\n",
+    "R1_height = 400  # Base resolution height\n",
+    "R1_width = 400   # Base resolution width\n",
+    "R2_factor = 1.5  # Scaling factor for intermediate resolution\n",
+    "R3_factor = 2   # Scaling factor for high resolution\n",
+    "\n",
+    "# Load SRCNN model\n",
+    "srcnn_model = load_model(\"/home/aflah/Desktop/Project-Phase-2/Model/srcnn_model.h5\")\n",
+    "\n",
+    "# Function to generate images at different resolutions\n",
+    "def generate_resolutions(image_path):\n",
+    "    # Load input image\n",
+    "    img = load_img(image_path)\n",
+    "    img_array = img_to_array(img) / 255.0\n",
+    "    \n",
+    "    # Base resolution generation\n",
+    "    base_resolution = srcnn_model.predict(np.expand_dims(img_array, axis=0))[0]\n",
+    "    base_resolution_img = array_to_img(base_resolution)\n",
+    "    \n",
+    "    # Intermediate resolution generation\n",
+    "    intermediate_resolution = array_to_img(base_resolution_img.resize((int(R1_height*R2_factor), int(R1_width*R2_factor))))\n",
+    "    intermediate_resolution = img_to_array(intermediate_resolution) / 255.0\n",
+    "    \n",
+    "    intermediate_resolution = srcnn_model.predict(np.expand_dims(intermediate_resolution, axis=0))[0]\n",
+    "    intermediate_resolution_img = array_to_img(intermediate_resolution)\n",
+    "    \n",
+    "    # High resolution generation\n",
+    "    high_resolution = array_to_img(intermediate_resolution_img.resize((int(R1_height*R3_factor), int(R1_width*R3_factor))))\n",
+    "    high_resolution = img_to_array(high_resolution) / 255.0\n",
+    "    \n",
+    "    high_resolution = srcnn_model.predict(np.expand_dims(high_resolution, axis=0))[0]\n",
+    "    high_resolution_img = array_to_img(high_resolution)\n",
+    "    \n",
+    "    return base_resolution_img, intermediate_resolution_img, high_resolution_img\n",
+    "\n",
+    "# Process images in the input folder\n",
+    "for filename in os.listdir(input_folder):\n",
+    "    if filename.endswith(('.jpg', '.jpeg', '.png')):\n",
+    "        image_path = os.path.join(input_folder, filename)\n",
+    "        base_img, intermediate_img, high_img = generate_resolutions(image_path)\n",
+    "        \n",
+    "        # Save generated images\n",
+    "        base_img.save(os.path.join(output_folder, f\"{filename}_base_resolution.jpg\"))\n",
+    "        intermediate_img.save(os.path.join(output_folder, f\"{filename}_intermediate_resolution.jpg\"))\n",
+    "        high_img.save(os.path.join(output_folder, f\"{filename}_high_resolution.jpg\"))\n"
+   ]
   }
  ],
  "metadata": {
@@ -820,7 +1161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
